--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -33,11 +33,13 @@
             {% block content %}
             {% endblock content %}
         </div>
+        {% block include_js %}
+        {% endblock include_js %}
         <script>
             document.addEventListener('DOMContentLoaded', (event) => {
                 // DOM Loaded
                 {% block domready %}
-                {% endblock domready %}
+                {% endblock domready %} 
             })
         </script>
     </body>
