--- a/courses/templates/courses/manage/module/content_list.html
+++ b/courses/templates/courses/manage/module/content_list.html
@@ -66,3 +66,24 @@
         </div>
     {% endwith %}
 {% endblock content %}
+
+{% block include_js %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5sortable/0.13.3/html5sortable.min.js"
+            integrity="sha512-3btxfhQfasdVcv1dKYZph5P7jFeeLRcF1gDVzFA+k9AiwwhB1MNI7O58zCK0uVItuMHNDR5pMoF2nqlCGzUwZQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"></script>
+{% endblock include_js %}
+
+{% block domready %}
+    var options = {
+    method: 'POST',
+    mode: 'same-origin',
+    };
+
+    const moduleOrderUrl = '{% url "module_order" %}';
+
+    sortable('#modules', {
+    forcePlaceholderSize: true,
+    placeholderClass: 'placeholder',
+    });
+{% endblock domready %}
