add Educa link in the header

--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="header">
-            <a href="/" class="logo">Educa</a>
+            <a href="{% url "course_list" %}" class="logo">Educa</a>
             <ul class="menu">
                 {% if request.user.is_authenticated %}
                     <li>
